# eml

./: .gitignore  Makefile  README.md  TODO.txt  api.py  find_eml.py  install.sh  pyproject.toml  testapp.eml  testapp.eml.py  testapp.eml.sh
distribution/: .env.example  README.md  TODO.txt  docker-compose.yml
distribution/llm-generator/: Dockerfile  code_generator.py  email_packager.py  llm_providers.py  main.py  requirements.txt
distribution/monitoring/: prometheus.yml
distribution/scripts/: setup.sh  test-system.sh
distribution/smtp-service/: Dockerfile  app.py  requirements.txt
distribution/templates/: generation_prompt.jinja2
distribution/webhook-receiver/: Dockerfile  webhook_server.py
distrocamel/: .env.example  TODO.txt
distrocamel/docker-compose/: docker-compose.yml
distrocamel/web-client/: Dockerfile  package.json
docs/: README.md  _sidebar.md  index.md
docs/api/: index.md
docs/architecture/: index.md
docs/examples/: index.md
docs/faq/: index.md
docs/installation/: index.md
eml/: README.md
eml_docker/: COMPARE.md  README.md  RESEARCH.md  TODO.txt  docker.eml.py  docker.eml.sh  eml_script_gen.py  run.sh  run_webapp.sh
eml_py/: README.md  TODO.txt  testapp.eml.py
eml_sh/: TODO.txt  advanced_sample.eml  clean_webapp.sh  render.py  render2.py  run_eml_app.sh  run_webapp.sh  serve_webapp.py  testapp.eml.sh
peml/: __init__.py
render/: Dockerfile  README.md  cli.py  docker-compose.yml  docker.sh  example.py  requirements.txt  server.py
tests/: conftest.py  test_api.py  test_cli.py  test_core.py  test_validator.py
(+37 files in other folders)
